updated with actual stuff

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
                             About Me
                         </div>
                         <span id="divider"></span>
-                        <img src="http://lorempixel.com/output/nature-q-g-200-200-5.jpg" id="image1" height="200" width="200"/>
+                        <img src="./assets/images/IMG_0320.png" id="image1" height="200" width="200"/>
                         <p id="text">
-                            Put in a deck for our standup today fast track for window of opportunity so future-proof message the initiative this is our north star design. Gain traction flesh that out or what's the status on the deliverables for eow? 
+                            Tapping into the bravery I inherited from my dad who emigrated from the hills of the tiny tropical island, Jamaica to the frigid cold of Canada's most populous city with little more than his ambition and the clothes on his back; I've decided to leave more than a decade of experience as a payroll professional to go ALL-IN on a career change.
                             <br>
-                            Deploy onward and upward, productize the deliverables and focus on the bottom line, nor streamline, nor drink from the firehose can you slack it to me? but let's prioritize the low-hanging fruit. 
+                            <br>
+                            A thoughtful methodical lover of all things creative I've finally found a way to keep both my left and right brain happy through full stack web development.  
+                            <br>
+                            <br>                            
                         </p>
                     </div> 
                 </div>
