--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
                     </div>
                     <span id="divider"></span>
                     
-                        <img id="portf1" src="http://lorempixel.com/output/nature-q-g-250-200-4.jpg" height="200" width="250"/>
-                        <img id="portf2" src="http://lorempixel.com/output/city-q-g-250-200-10.jpg" height="200" width="250"/>
-                        <img id="portf3" src="http://lorempixel.com/output/nature-q-g-250-200-7.jpg" height="200" width="250"/>
-                        <img id="portf4" src="http://lorempixel.com/output/nature-q-g-250-200-2.jpg" height="200" width="250"/>
-                        <img id="portf5" src="http://lorempixel.com/output/city-q-g-250-200-2.jpg" height="200" width="250"/>
+                        <a href="https://deedlist.herokuapp.com/"><img id="portf1" src="./assets/images/logo.png" height="200" width="250" alt="https://deedlist.herokuapp.com/"/></a>
+                        <a href="https://adenasgittinit.github.io/Travel-Link/"><img id="portf2" src="./assets/images/travelink.png" height="200" width="250"/></a>
+                        <a href="https://express-yourself-note-taker.herokuapp.com/"><img id="portf3" src="./assets/images/note taker.png" height="200" width="250"/></a>
+                        <a href="https://adenasgittinit.github.io/Weather-Dashboard/"><img id="portf4" src="./assets/images/weather dash.png" height="200" width="250"/></a>
+                        <a href="https://adenasgittinit.github.io/JS-Code-Quiz/"><img id="portf5" src="./assets/images/code quiz.png" height="200" width="250"/></a>
 
                 </div>
             </div>
