--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
                 </h1>
                 <div class="nav-list">
                         <ul>
-                            <li class="nav-item"><a href="https://adenasgittinit.github.io/Basic-Portfolio/index.html">About</a></li>
+                            <li class="nav-item"><a href="https://adenasgittinit.github.io/Responsive-Portfolio/index.html">About</a></li>
                             <li class="nav-item"><a href="#">Portfolio</a></li>
-                            <li class="nav-item3"><a href="https://adenasgittinit.github.io/Basic-Portfolio/contact.html">Contact</a></li>
+                            <li class="nav-item3"><a href="https://adenasgittinit.github.io/Responsive-Portfolio/contact.html">Contact</a></li>
                         </ul>
                 </div>
             </nav>
@@ -32,12 +32,35 @@
                         Portfolio
                     </div>
                     <span id="divider"></span>
-                    
-                        <a href="https://deedlist.herokuapp.com/"><img id="portf1" src="./assets/images/logo.png" height="200" width="250" alt="https://deedlist.herokuapp.com/"/></a>
-                        <a href="https://adenasgittinit.github.io/Travel-Link/"><img id="portf2" src="./assets/images/travelink.png" height="200" width="250"/></a>
-                        <a href="https://express-yourself-note-taker.herokuapp.com/"><img id="portf3" src="./assets/images/note taker.png" height="200" width="250"/></a>
-                        <a href="https://adenasgittinit.github.io/Weather-Dashboard/"><img id="portf4" src="./assets/images/weather dash.png" height="200" width="250"/></a>
-                        <a href="https://adenasgittinit.github.io/JS-Code-Quiz/"><img id="portf5" src="./assets/images/code quiz.png" height="200" width="250"/></a>
+                        <a href="https://deedlist.herokuapp.com/">
+                            <img id="portf1" src="./assets/images/logo.png" height="200" width="250" alt="https://deedlist.herokuapp.com/"/>
+                        </a>
+                            <!-- <a href="https://github.com/AdenasGittinIt/deedlist">deedlist</a> -->
+
+                            <a href="https://adenasgittinit.github.io/Travel-Link/">
+                                <img id="portf2" src="./assets/images/travelink.png" height="200" width="250"/>
+                            </a>
+
+                                <!-- <a href="https://github.com/AdenasGittinIt/Travel-Link">Travel-Link</a> -->
+
+                            <a href="https://express-yourself-note-taker.herokuapp.com/">
+                                <img id="portf3" src="./assets/images/note taker.png" height="200" width="250"/>
+                            </a>
+
+      
+                                <!-- <a href="https://github.com/AdenasGittinIt/Express-Yourself">Express-Yourself</a> -->
+
+                            <a href="https://adenasgittinit.github.io/Weather-Dashboard/">
+                                <img id="portf4" src="./assets/images/weather dash.png" height="200" width="250">
+                            </a>
+
+                                <!-- <a href="https://github.com/AdenasGittinIt/Weather-Dashboard">Weather-Dashboard</a> -->
+
+                            <a href="https://adenasgittinit.github.io/JS-Code-Quiz/">
+                                <img id="portf5" src="./assets/images/code quiz.png" height="200" width="250"/>
+                            </a>
+
+                                <!-- <a href="https://github.com/AdenasGittinIt/JS-Code-Quiz">JS-Code-Quiz</a> -->
 
                 </div>
             </div>
