--- a/contact.html
+++ b/contact.html
@@ -1,59 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me!</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Test Me</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Comfortaa">
+<style>
+body {
+font-family: 'Comfortaa', cursive;
+font-size: 18px;
+}
+
+.background {
+  background-image: url("./assets/images/concrete-texture.png");
+}
+</style>
 </head>
-    <body>
-        <header>
-            <nav class="name-nav">
-                <h1>
-                    Adena L. McGibbon
-                </h1>
-                <div class="nav-list">
-                        <ul>
-                            <li class="nav-item"><a href="https://adenasgittinit.github.io/Responsive-Portfolio/index.html">About</a></li>
-                            <li class="nav-item"><a href="https://adenasgittinit.github.io/Responsive-Portfolio/portfolio.html">Portfolio</a></li>
-                            <li class="nav-item3"><a href="#">Contact</a></li>
-                        </ul>
+
+
+<body class="background">
+    <div class="row">
+    
+      <nav>
+        <div class="blue darken-3 col s12 nav-wrapper">
+          <a href="#" class="brand-logo">Adena L. McGibbon</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/index.html">About</a>
+            </li>
+            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/portfolio.html">Portfolio</a></li>
+            <li><a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>  <!--this is the nav wrapper --> 
+      </nav>
+    </div>  <!--this is the row for the nav bar -->
+
+
+
+  <div class="container">
+
+
+      <div class="col s12 l4">
+        <div class="card-panel">
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s6">
+                  <input placeholder="First Name" id="first_name" type="text" class="validate">
+                  <label for="first_name"></label>
                 </div>
-            </nav>
-        </header>
-        <div class="background">
-                <div class="wrapper">
-                    <!-- This is the middle white section of the page  -->
-                    <div class="content">
-                    <!-- This is the 'about me' text -->
-                        <div class="about-me">
-                            Contact
-                        </div>
-                        <span id="divider"></span>
-                        <form class="form">
-                                Name<br><br>
-                                <input class="name-input" type="text">
-                                <br><br>
-                                Email<br><br>
-                                <input class="email" type="text">
-                                <br><br>
-                                Message<br><br>
-                                <input class="message">
-                                <br><br>
-                                <input class="submit" type="submit" value="Submit">
-                              </form> 
-                        <!-- <p id="text">
-                            Put in a deck for our standup today fast track for window of opportunity so future-proof message the initiative this is our north star design. Gain traction flesh that out or what's the status on the deliverables for eow? 
-                            <br>
-                            Deploy onward and upward, productize the deliverables and focus on the bottom line, nor streamline, nor drink from the firehose can you slack it to me? but let's prioritize the low-hanging fruit. 
-                        </p> -->
-                    </div> 
+                <div class="input-field col s6">
+                  <input placeholder="Last Name" id="last_name" type="text" class="validate">
+                  <label for="last_name"></label>
                 </div>
-        </div>
-    <footer>
-        Copyright © 
-    </footer>
-    </body>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="Email" id="email" type="email" class="validate">
+                  <label for="email"></label>
+                </div>
+              </div>
+              <div class="row">
+                <form class="col s12">
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <textarea placeholder="Write your message here" id="textarea1" class="materialize-textarea"></textarea>
+                      <label for="textarea1"></label>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </form>
+          </div>
+      </div> <!--card div-->
+      </div> <!--second col in the first row-->
+
+
+
+
+
+
+    
+
+  </div> <!--container div-->
+</body>
 </html>
