Updated contact to email addy

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Good Test</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Comfortaa">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 <style>
 body {
 font-family: 'Comfortaa', cursive;
@@ -31,7 +31,7 @@ font-size: 18px;
             <li><a href="#">About</a>
             </li>
             <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/portfolio.html">Portfolio</a></li>
-            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/contact.html">Contact</a>
+            <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#100;&#101;&#110;&#97;&#46;&#109;&#99;&#103;&#105;&#98;&#98;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" target="_blank">&#67;&#111;&#110;&#116;&#97;&#99;&#116;&#32;&#77;&#101;</a>
             </li>
           </ul>
         </div>  <!--this is the nav wrapper --> 
@@ -45,7 +45,7 @@ font-size: 18px;
       <div class="col s12 l3">
         <div class="card">
           <div class="card-image">
-            <a href="https://adenasgittinit.github.io/JS-Code-Quiz/" target="_blank">
+            <a href="https://github.com/AdenasGittinIt" target="_blank">
               <img id="portf5" src="./assets/images/IMG_0320.png" />
             </a>
           </div> <!--card image div-->
@@ -67,13 +67,8 @@ font-size: 18px;
       </div> <!--card div-->
       </div> <!--second col in the first row-->
     </div> <!--first row-->
-
-
-
-
-
-    
-
   </div> <!--container div-->
+
+<!-- <script src="assets/script.js"></script> -->
 </body>
 </html>
