--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@ font-size: 18px;
             </li>
             <li><a href="#">Portfolio</a>
             </li>
-            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/contact.html">Contact</a>
+            <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#100;&#101;&#110;&#97;&#46;&#109;&#99;&#103;&#105;&#98;&#98;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" target="_blank">&#67;&#111;&#110;&#116;&#97;&#99;&#116;&#32;&#77;&#101;</a>
             </li>
           </ul>
         </div>  <!--this is the nav wrapper --> 
