--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Good Stuff</title>
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Comfortaa">
@@ -50,52 +51,52 @@ font-size: 18px;
   <div class="container">
     <div class="row">
       <div class="col s12 l4">
-        <div class="card">
+        <div class="card-panel blue darken-3 white-text">
+            <p>
+              click an image to see the app or the title to see the github repo.
+            </p>
+        </div> <!--card div-->
+      </div> <!--second col in the first row-->
+      
+      <div class="col s12 l4">
+        <div class="card hoverable">
           <div class="card-image">
             <a href="https://adenasgittinit.github.io/JS-Code-Quiz/" target="_blank">
               <img id="portf5" src="./assets/images/code quiz.png" />
             </a>
           </div> <!--card image div-->
           <div class="card-content">
-            <a class="card-title blue-text center" href="https://github.com/AdenasGittinIt/JS-Code-Quiz" target="_blank">JS-Code-Quiz</a>
+            <a class="card-title blue-text center hoverable" href="https://github.com/AdenasGittinIt/JS-Code-Quiz" target="_blank">JS-Code-Quiz</a>
           </div> <!--card content div-->
         </div> <!-- card div-->
       </div> <!--first col in first row-->
       <div class="col s12 l4"></div> <!--empty col-->
-
-      <div class="col s12 l4">
-        <div class="card-panel blue darken-3 white-text">
-            <p>
-              click an image to see the app or the title to see the github repo.
-            </p>
-      </div> <!--card div-->
-      </div> <!--second col in the first row-->
     </div> <!--first row-->
 
     <div class="row">
-      <div class="col s12 l4"></div> <!--empty col-->
+      
       <div class="col s12 l4">
-        <div class="card">
+        <div class="card hoverable">
           <div class="card-image">
             <a href="https://deedlist.herokuapp.com/" target="_blank">
               <img id="portf5" src="./assets/images/logo.png" />
             </a>
           </div> <!--card image div-->
           <div class="card-content">
-            <a class="card-title blue-text center" href="https://github.com/AdenasGittinIt/deedlist" target="_blank">deedlist</a>
+            <a class="card-title blue-text center hoverable" href="https://github.com/AdenasGittinIt/deedlist" target="_blank">deedlist</a>
           </div> <!--card content div-->
         </div> <!-- card div-->
       </div> <!--second col in second row-->
-
+      <div class="col s12 l4"></div> <!--empty col-->
       <div class="col s12 l4">
-        <div class="card">
-          <div class="card-image">
+        <div class="card hoverable">
+          <div class="card-image ">
             <a href="https://express-yourself-note-taker.herokuapp.com/" target="_blank">
               <img id="portf5" src="./assets/images/note taker.png"/>
             </a>
           </div> <!--card image div-->
           <div class="card-content">
-            <a class="card-title blue-text center" href="https://github.com/AdenasGittinIt/Express-Yourself" target="_blank">express yo self</a>
+            <a class="card-title blue-text center hoverable" href="https://github.com/AdenasGittinIt/Express-Yourself" target="_blank">express yo self</a>
           </div> <!--card content div-->
         </div> <!-- card div-->
       </div> <!--third col in second row-->
@@ -103,14 +104,14 @@ font-size: 18px;
 
     <div class="row">
       <div class="col s12 l4">
-        <div class="card">
+        <div class="card hoverable">
           <div class="card-image">
             <a href="https://adenasgittinit.github.io/Travel-Link/" target="_blank">
-             <img id="portf5" src="./assets/images/travelink.png"/>
+             <img id="portf5" src="./assets/images/travelink2.png"/>
             </a>
           </div> <!--card image div-->
           <div class="card-content">
-            <a class="card-title blue-text center" href="https://github.com/AdenasGittinIt/Travel-Link" target="_blank">travelink</a>
+            <a class="card-title blue-text center hoverable" href="https://github.com/AdenasGittinIt/Travel-Link" target="_blank">travelink</a>
           </div> <!--card content div-->
         </div> <!-- card div-->
       </div> <!--third col in second row-->
@@ -118,14 +119,14 @@ font-size: 18px;
 
       <div class="row">
         <div class="col s12 l4">
-          <div class="card">
+          <div class="card hoverable">
             <div class="card-image">
               <a href="https://adenasgittinit.github.io/Weather-Dashboard/" target="_blank">
                <img id="portf5" src="./assets/images/weather dash.png"/>
               </a>
             </div> <!--card image div-->
             <div class="card-content">
-              <a class="card-title blue-text center" href="https://github.com/AdenasGittinIt/Weather-Dashboard" target="_blank">weather-dashboard</a>
+              <a class="card-title blue-text center hoverable" href="https://github.com/AdenasGittinIt/Weather-Dashboard" target="_blank">weather-dashboard</a>
             </div> <!--card content div-->
           </div> <!-- card div-->
         </div> <!--third col in third row-->
