--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Test Me</title>
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Comfortaa">
-<style>
-body {
-font-family: 'Comfortaa', cursive;
-font-size: 18px;
-}
-
-.background {
-  background-image: url("./assets/images/concrete-texture.png");
-}
-</style>
 </head>
 
 
@@ -41,50 +32,19 @@ font-size: 18px;
 
 
   <div class="container">
-
-
       <div class="col s12 l4">
-        <div class="card-panel">
-          <div class="row">
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input placeholder="First Name" id="first_name" type="text" class="validate">
-                  <label for="first_name"></label>
-                </div>
-                <div class="input-field col s6">
-                  <input placeholder="Last Name" id="last_name" type="text" class="validate">
-                  <label for="last_name"></label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input placeholder="Email" id="email" type="email" class="validate">
-                  <label for="email"></label>
-                </div>
-              </div>
-              <div class="row">
-                <form class="col s12">
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <textarea placeholder="Write your message here" id="textarea1" class="materialize-textarea"></textarea>
-                      <label for="textarea1"></label>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </form>
-          </div>
-      </div> <!--card div-->
-      </div> <!--second col in the first row-->
-
-
-
-
-
-
-    
-
+        <div class="collection">
+          <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#100;&#101;&#110;&#97;&#46;&#109;&#99;&#103;&#105;&#98;&#98;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" target="_blank" class="collection-item blue-text">
+            <h5>&#69;&#109;&#97;&#105;&#108;&#32;&#77;&#101;</h5>
+          </a>
+          <a href="https://www.linkedin.com/in/adenamcgibbon" target="_blank" class="collection-item blue-text">
+            <h5>Find me on LinkedIn</h5></a>
+          <a href="https://github.com/AdenasGittinIt" target="_blank" class="collection-item blue-text">
+            <h5>Check out my GitHub</h5>
+          </a>
+            
+        </div>
+    </div> <!--second col in the first row-->
   </div> <!--container div-->
 </body>
 </html>
