--- a/contact.html
+++ b/contact.html
@@ -13,21 +13,22 @@
 
 
 <body class="background">
-    <div class="row">
-    
-      <nav>
-        <div class="blue darken-3 col s12 nav-wrapper">
-          <a href="#" class="brand-logo">Adena L. McGibbon</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/index.html">About</a>
-            </li>
-            <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/portfolio.html">Portfolio</a></li>
-            <li><a href="#">Contact</a>
-            </li>
-          </ul>
-        </div>  <!--this is the nav wrapper --> 
-      </nav>
-    </div>  <!--this is the row for the nav bar -->
+  <div class="row">
+    <nav>
+      <div class="blue darken-3 col s12 nav-wrapper">
+        <span class="brand-logo">Adena L. McGibbon</span>
+        <a href="#" class="sidenav-trigger" data-target="mobile-nav">
+          <i class="material-icons">menu</i>
+        </a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">About</a></li>
+          <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/portfolio.html">Portfolio</a></li>
+          <li><a href="https://adenasgittinit.github.io/Responsive-Portfolio/contact.html" target="_blank">&#67;&#111;&#110;&#116;&#97;&#99;&#116;&#32;&#77;&#101;</a></li>
+        </ul>
+      </div>  <!--this is the nav wrapper --> 
+    </nav>
+  </div>  <!--this is the row for the nav bar -->
+
 
 
 
