--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       <div class="col s12 l9">
         <div class="card-panel">
           <p id="text">
-            A Full Stack Web Developer employing a photographer’s eye to create beautiful front end designs and clean readable code. Earned a Certificate in Full Stack Web Development from the University of Denver. Described as meticulous and methodical with an elegant approach to problem solving. Skilled at prioritizing tasks to meet tight deadlines.
+            A Full Stack Web Developer employing a photographer’s eye to create clean user interfaces and readable code; I earned my certificate in full stack web development from the University of Denver. 
             <br>
             <br>
-            I'm tapping into the bravery I inherited from my dad. He emigrated from the hills of the tiny tropical Jamaica island, to the frigid cold of Canada's most populous city with little more than his ambition and the clothes on his back; I've decided to leave more than a decade of experience as a payroll professional to go ALL-IN as a Web Developer.
+            Detail oriented in every task I undertake, I've been described as meticulous and methodical with an elegant approach to problem solving. My payroll background has gifted me with the skills needed to prioritize tasks and meet tight deadlines.
             <br>
             <br>
-            I love of all things creative and have finally found a way to keep both my left and right brain happy through full stack web development.  
+            I love of all things creative.  Learning web development has been a gift in that I can simultaneously occupy the expressive, creative and analytical aspects of my nature.  
             <br>
             <br>                            
         </p>
