--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Detail oriented in every task I undertake, I've been described as meticulous and methodical with an elegant approach to problem solving. My payroll background has gifted me with the skills needed to prioritize tasks and meet tight deadlines.
             <br>
             <br>
-            I love of all things creative.  Learning web development has been a gift in that I can simultaneously occupy the expressive, creative and analytical aspects of my nature.  
+            I love all things creative.  Learning web development has been a gift in that I can simultaneously occupy the expressive, creative and analytical aspects of my nature.  
             <br>
             <br>                            
         </p>
